--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "mocha": "^3.0.1",
     "nodemon": "^1.10.0",
     "supertest": "^3.0.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "js-combinatorics": "^0.5.2",
+    "latinize": "^0.4.0",
+    "lodash": "^4.17.4"
   }
 }
