--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "Node Server w/ Babel",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js --exec babel-node --presets es2015,stage-2",
+    "start": "nodemon src/index.js --exec babel-node --presets es2015,stage-0",
     "build": "babel src -d dist",
     "serve": "node dist/index.js",
-    "test": "mocha --compilers js:babel-register",
-    "tdd": "NODE_ENV=test nodemon --exec \"mocha --compilers js:babel-register\""
+    "test": "mocha --compilers js:babel-core/register --require babel-polyfill",
+    "tdd": "NODE_ENV=test nodemon --exec \"mocha --compilers js:babel-core/register --require babel-polyfill\""
   },
   "author": "Peter Gombos <pepegombos@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
     "babel-plugin-module-resolver": "^2.7.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.11.0",
     "babel-register": "^6.11.6",
     "chai": "^3.5.0",
