--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "babel-node-server",
-  "version": "1.0.0",
-  "description": "Node Server w/ Babel",
-  "main": "src/index.js",
+  "name": "mailflow-core",
+  "version": "0.0.4",
+  "description": "MailFlow Core Lib",
+  "main": "dist/index.js",
   "scripts": {
     "start": "nodemon src/index.js --exec babel-node --presets es2015,stage-0",
     "build": "babel src -d dist",
     "serve": "node dist/index.js",
     "test": "mocha --compilers js:babel-core/register --require babel-polyfill",
-    "tdd": "NODE_ENV=test nodemon --exec \"mocha --compilers js:babel-core/register --require babel-polyfill\""
+    "tdd": "NODE_ENV=test nodemon --exec \"mocha --compilers js:babel-register\"",
+    "prepublish": "npm run build"
   },
   "author": "Peter Gombos <pepegombos@gmail.com>",
   "license": "ISC",
@@ -18,7 +19,6 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-module-resolver": "^2.7.0",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.11.0",
@@ -36,6 +36,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "bluebird": "^3.5.0",
     "js-combinatorics": "^0.5.2",
     "latinize": "^0.4.0",
